1999-12-19  Alexander V. Lukyanov  <lav@yars.free.net>

        * HttpDir.cc: decode &amp; and similar; don't accept ~ for ListInfo.

1999-12-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: get1 command.
	* XferJob.cc: move xfer:eta-terse to CopyJob.
	* FtpCopy.cc, FtpCopy.h: save retries count.
	* CopyJob.cc, CopyJob.h: first version.
	* FileCopy.cc, FileCopy.h: finished.
	* NetAccess.cc: correct calculations in extreme cases
	  (reported by Robert de Bath)
	* FileAccess.cc, FileAccess.h: expand tilde in file and file1 too.
	  (ExpandTildeStatic) new method; New from ParsedURL; propagate
	  passwords.
	* ftpclass.cc: handle size==0 in Write; expand tilde for ARRAY_INFO;
	  correct test for ftp:rest-stor.
	* Http.cc: handle size==0 in Write; send port to proxy;
	  encode hostname; in error message append / conditionally.
	* url.h: add more URL_*_UNSAFE.

1999-12-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* Filter.h, Filter.cc: add can_seek method.
	* buffer.cc, buffer.h: add UnSkip method.

1999-12-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* LocalAccess.h: remove error_code (it is defined in super class) -
	  this fixes error handling in file: urls.
	* LocalAccess.cc: set size and date to -1 in case of error;
	  fill opt_size and opt_date.
	* FileAccess.h: IOReady checks IsOpen.
	* ftpclass.cc: IOReady checks IsOpen.
	* buffer.cc, buffer.h: add pos member; de-virtualize Skip.
	* Filter.cc: don't close -1; correct default file permissions.

1999-12-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: check use-abor before sending ABOR.
	* LsCache.cc: use SMTask::now.
	* misc.cc: include time.h

1999-12-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, Http.cc, url.cc: fix ftp url handling (%2F for root)
	  (reported by Robert de Bath <rdebath@poboxes.com>)
	* url.h: no need to specify \033 in URL_UNSAFE; define URL_PATH_UNSAFE.
	* url.cc: avoid // for ftp urls.